3.30.1
======
Mar 6, 2023
- Fix soft and sustained assertions
- List all errors at summary level in HTML report

3.30.0 
======
Mar 3, 2023
- New feature request gwen-interpreter/gwen-web#103
  - Introduce `load` command in REPL console for reloading changed meta

3.29.7
======
Mar 1, 2023
- Accept meta having no steps

3.29.6
======
Mar 1, 2023
- Fix configured CLI input data option to accept single entry only

3.29.5
======
Feb 25, 2023
- Only require at least one input for dry run when data input file is specified

3.29.4
======
Feb 17, 2023
- Defer initialisation of HTML report file resources until needed

3.29.3
======
Feb 16, 2023
- Update dependencies
  - Update scala from v3.2.1 to v3.2.2
  - Update gherkin from v25.0.2 to v26.0.3
  - Update rp-common from v5.3.3 to v5.7.3
  - Update client-java from v5.0.22 to v5.1.15
- Update dependency overrides
  - Update jackson-databind from v2.14.1 to 2.14.2
  - Removed tika-core
- Update copyright year

3.29.2
======
Dec 23, 2022
- Update transitive dependencies (security upgrade)

3.29.1
======
Dec 23, 2022
- Include lapsed time in HTML summaries and remove overhead times

3.29.0
======
Dec 9, 2022
- Add new DSL for conditionally evaluating steps based on whether or not a binding is defined
  - `<step> if <attribute> is[ not] defined`

3.28.17
=======
Dec 6, 2022
- Update runtime dependencies
  - Update scala from v3.2.0 to v3.2.1
  - Update gherkin from v24.0.0 to v25.0.2
  - Update commons-text from v1.9 to v1.10.0
  - Update joda-time from v2.11.2 to v2.12.2
- Update runtime overrides
  - Update jackson-databind from v2.13.4 to 2.14.1
- Update test dependencies
  - Update mockito-core from v4.8.0 to v4.9.0

3.28.16
=======
Nov 6, 2022
- Raise error when attempt is made to parse empty feature file
- Raise error when attempt is made to process feature with no steps
- Fix resolve of nested masked settings
- At least one input required for dry run

3.28.15
=======
Oct 17, 2022
- Align Gwen logo in HTML reports
